# s25update

./: .gitignore  CMakeLists.txt
.github/workflows/: static-analysis.yml
src/: CMakeLists.txt  main.cpp  main.h  md5.cpp  md5.h  md5sum.cpp  md5sum.h  s25update.cpp  s25update.h
win32/: resource.h  s25update.exe.manifest  s25update.rc
win32/vs2008/: s25update.vcproj
win32/vs2010/: resource.h  s25update.rc  s25update.vcxproj  s25update.vcxproj.filters
win32/vs2012/: s25update.vcxproj  s25update.vcxproj.filters
